trying to fix font issue on iphone

--- a/scss/_sliders.scss
+++ b/scss/_sliders.scss
@@ -2,6 +2,45 @@
 //     display: none;
 // }
 
+#flipcontainer {
+    display: grid;
+    background: black;
+    width: 250px;
+    min-height: 350px;
+    border: $todoborder;
+    margin: 1% auto;
+    & #flipcard {
+        position: relative;
+        background: black;
+        width: 100%;
+        height: 100%;
+        transform-style: preserve-3d;
+        transition: transform 0.6s;
+        transition: all 0.8s ease;
+        transform-origin: center;
+        & #front {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+            background: black;
+            color: white;
+            border-radius: $radius;
+            box-shadow: 0px 0px 10px rgba(238, 198, 198, 0.2);
+        }
+        & #back {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+            background: black;
+            color: $accent3;
+            border-radius: $radius;
+            box-shadow: 0px 0px 10px rgba(238, 198, 198, 0.2);
+        }
+    }
+}
+
 .slider-label {
   border: 1px solid #fff;
     padding: 10px;
@@ -42,6 +81,7 @@ label img {
     margin-bottom: 1.5rem;
     transition-duration: 0.2s;
     transform-origin: 50% 50%;
+    transform: scale(.9);
 }
 
 :checked + label {
@@ -53,11 +93,17 @@ label img {
     font-size: 2em;
     margin: auto;
     background-color: $limegreen;
-    transform: scale(2);
+    transform: scale(1.1);
+    transition-duration: 0.2s;
+}
+
+:checked + label h2 {
+  transform: scale(1.25);
 }
 
 :checked + label img {
-    transform: scale(0.9);
+    transform: scale(1.05);
+    transition-duration: 0.2s;
     /* box-shadow: 0 0 5px #333; */
     z-index: -1;
 }
